tdf#154913 empty is a valid GridOffset

so use std::optional to detect when GridOffset needs to be computed, otherwise we will needlessly compute it every time.

This by itself doesn't help the performance here very much, there is another place which needs a similar fix.

Change-Id: I598544d3d4c58afb543bd1566536f47a575a2c41
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191384
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins